# Magic-Compare-Web

./: .dockerignore  .env.example  .gitignore  .impeccable.md  .prettierignore  AGENTS.md  CHANGELOG.md  PRODUCT.md  README.md  README.zh-CN.md  debug-viewer-demo.sh  docker-compose.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml  ghcr-docker.yml  uploader-binaries.yml
apps/: build-metadata.ts
apps/internal-site/: eslint.config.mjs  next.config.ts  package.json
apps/internal-site/app/: globals.css  layout.tsx  page.tsx
apps/internal-site/components/: case-create-button.tsx  case-directory-card.tsx  case-directory-empty-state.tsx  case-directory-grid.tsx  case-workspace-board.tsx  (+2 more)
apps/public-site/: eslint.config.mjs  next.config.ts  package.json  tsconfig.json
docker/: ci.compose.override.yml  dev.compose.override.yml  internal-site-init.sh  internal-site.Dockerfile  rustfs-init.sh
docs/: INDEX.md  VSEDITOR-WORKFLOW.zh-CN.md  ci-ghcr-lessons.zh-CN.md  commit-guide.md  demo-vs-real-case-flow.zh-CN.md  internal-site-api-endpoints.zh-CN.md  mcp-guide.md  mcp-usage-guide.md  optimize.md  uiux-todo.md  uploader-frontend-roadmap-2026-03-21.zh-CN.md  vseditor-workflow.zh-CN.md  web-uploader.zh-CN.md  workflow-guide.md
docs/archive/: 2026-03-20-frontend-refresh.zh-CN.md  2026-03-21-footer-and-runtime-config-notes.zh-CN.md  2026-03-26-r2-frame-upload-rewrite-notes.zh-CN.md  2026-03-28-maintainability-cleanup-notes.zh-CN.md  2026-03-28-uploader-progress-and-throughput-notes.zh-CN.md  2026-06-28-v1-8-release-lessons.zh-CN.md  browser-smoke-and-ci-prep.zh-CN.md  mcp-vector-search-audit-2026-03-21.zh-CN.md  mcp-vector-search-usable-commands-2026-03-21.zh-CN.md  project-overview-guide.md  uploader-frontend-roadmap-2026-03-21.zh-CN.md
docs/reference/: api-endpoints.zh-CN.md  database-architecture.zh-CN.md  demo-vs-real.zh-CN.md
docs/ui-improvements/: 2026-03-20-frontend-refresh.zh-CN.md  2026-03-21-footer-and-runtime-config-notes.zh-CN.md  2026-03-21-viewer-and-workspace-lessons.zh-CN.md  frontend-refresh-2026-03-20.zh-CN.md  viewer-stage-and-filmstrip-notes.zh-CN.md
docs/uploader/: README.md  boundaries-and-env-split.zh-CN.md  distribution.zh-CN.md  vseditor-workflow.zh-CN.md
scripts/: clean.mjs  debug-viewer-demo.sh  deploy-public.ts  export-public.ts  sync-published.mjs  sync-published.ts  write-public-route-aliases.mjs  write-public-route-aliases.ts
scripts/lib/: workspace-env.mjs
tools/uploader/: .env.example  README.md  VSEDITOR-WORKFLOW.zh-CN.md  pyproject.toml
tools/uploader/assets/: ascii-logo.txt
tools/uploader/scripts/: build-binary.py
tools/uploader/src/: __init__.py  api_client.py  auth.py  branding.py  cli.py  commands.py  config.py  editor.py  image_sanity.py  manifest.py  naming.py  plan.py  quotes.py  scanner.py  source_parser.py  storage.py  thumbnailer.py  upload_executor.py  wizard.py  workspace_builder.py
tools/uploader/tests/: test_api_client.py  test_auth.py  test_branding.py  test_build_binary.py  test_cli.py  test_commands.py  test_image_sanity.py  test_manifest.py  test_naming.py  test_plan.py  test_scanner.py  test_source_parser.py  test_storage.py  test_thumbnailer.py  test_upload_executor.py  test_wizard.py  test_workspace_builder.py
(+132 files in other folders)
